; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_transaction.c_set_txn_proplist.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_transaction.c_set_txn_proplist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@svn_io_file_del_none = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i32*, i32*)* @set_txn_proplist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @set_txn_proplist(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @svn_fs_x__path_txn_dir(i32* %11, i32 %12, i32* %13)
  %15 = load i32, i32* @svn_io_file_del_none, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @svn_stream_open_unique(i32** %9, i8** %10, i32 %14, i32 %15, i32* %16, i32* %17)
  %19 = call i32 @SVN_ERR(i32 %18)
  %20 = load i32*, i32** %9, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @svn_fs_x__write_properties(i32* %20, i32* %21, i32* %22)
  %24 = call i32 @SVN_ERR(i32 %23)
  %25 = load i32*, i32** %9, align 8
  %26 = call i32 @svn_stream_close(i32* %25)
  %27 = call i32 @SVN_ERR(i32 %26)
  %28 = load i8*, i8** %10, align 8
  %29 = load i32*, i32** %5, align 8
  %30 = load i32, i32* %6, align 4
  %31 = load i32*, i32** %8, align 8
  %32 = call i32 @svn_fs_x__path_txn_props(i32* %29, i32 %30, i32* %31)
  %33 = load i32, i32* @FALSE, align 4
  %34 = load i32*, i32** %8, align 8
  %35 = call i32 @svn_io_file_rename2(i8* %28, i32 %32, i32 %33, i32* %34)
  %36 = call i32 @SVN_ERR(i32 %35)
  %37 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %37
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_stream_open_unique(i32**, i8**, i32, i32, i32*, i32*) #1

declare dso_local i32 @svn_fs_x__path_txn_dir(i32*, i32, i32*) #1

declare dso_local i32 @svn_fs_x__write_properties(i32*, i32*, i32*) #1

declare dso_local i32 @svn_stream_close(i32*) #1

declare dso_local i32 @svn_io_file_rename2(i8*, i32, i32, i32*) #1

declare dso_local i32 @svn_fs_x__path_txn_props(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
